--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
 		<meta name="description" content="" />
 		<meta name="keywords" content="" />
 		<!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
-		<script src="js/jquery.min.js"></script>
-		<script src="js/skel.min.js"></script>
-		<script src="js/skel-layers.min.js"></script>
-		<script src="js/init.js"></script>
+		<script src='https://dimitrisd1997.github.io/jquery.min.js'></script>
+		<script src='https://dimitrisd1997.github.io/skel.min.js'></script>
+		<script src='https://dimitrisd1997.github.io/skel-layers.min.js'></script>
+		<script src='https://dimitrisd1997.github.io/init.js'></script>
 		<noscript>
-			<link rel="stylesheet" href="css/skel.css" />
-			<link rel="stylesheet" href="css/style.css" />
-			<link rel="stylesheet" href="css/style-xlarge.css" />
+			<link rel="stylesheet" href='https://dimitrisd1997.github.io/skel.css' />
+			<link rel="stylesheet" href='https://dimitrisd1997.github.io/style.css' />
+			<link rel="stylesheet" href='https://dimitrisd1997.github.io/style-xlarge.css' />
 		</noscript>
 	</head>
 	 <body>
@@ -43,7 +43,7 @@
 		<!-- Banner -->
     <div class="sections">
 			<section id="banner">
-                 <img src="images/logo.png" style="width:650px;height:560px;">
+                 <img src='https://dimitrisd1997.github.io/logo.png' style="width:650px;height:560px;">
 				
 				<p>Explore Reading, explore, discover, and see the wonders of the Berkshire area.</p>
 				<ul class="actions">
@@ -83,14 +83,14 @@
 						</div>
 						<div class="4u 12u$(medium)">
 							<section class="box">
-								 <img src="images/bookmark-1.png" style="width:150px;height:auto">
+								 <img src='https://dimitrisd1997.github.io/bookmark-1.png' style="width:150px;height:auto">
 								<h3>Heuristic Evaluation</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium ullam consequatur repellat debitis maxime.</p>
 							</section>
 						</div>
 						<div class="4u$ 12u$(medium)">
 							<section class="box">
-							      <img src="images/video-player.png" style="width:150px;height:auto">
+							      <img src='https://dimitrisd1997.github.io/video-player.png' style="width:150px;height:auto">
 								<h3>Concept Video</h3>
 								<p style ="cursor: pointer" ><a 
                                  href="files/Concept%20Video.pdf" target ="_blank" > PDF</a>|<a
@@ -100,14 +100,14 @@
 						</div>
                         <div class="4u 12u$(medium)">
 							<section class="box">
-								 <img src="images/edit.png" style="width:150px;height:auto">
+								 <img src='https://dimitrisd1997.github.io/edit.png' style="width:150px;height:auto">
 								<h3>Low-Fi Prototype</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim quam consectetur quibusdam magni minus aut modi aliquid.</p>
 							</section>
 						</div>
                         <div class="4u 12u$(medium)">
 							<section class="box">
-								 <img src="images/network.png" style="width:150px;height:auto">
+								 <img src='https://dimitrisd1997.github.io/network.png' style="width:150px;height:auto">
 								<h3>Medium-Fi Prototype</h3>
 								<p style ="cursor: pointer" ><a 
                                  href="files/medfi%20ppt.pdf" target ="_blank" > PDF</a>|<a
@@ -116,7 +116,7 @@
 						</div>
                         <div class="4u 12u$(medium)">
 							<section class="box">
-								 <img src="images/television.png" style="width:150px;height:auto">
+								 <img src='https://dimitrisd1997.github.io/television.png' style="width:150px;height:auto">
 								<h3>High-Fi Prototype</h3>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim quam consectetur quibusdam magni minus aut modi aliquid.</p>
 							</section>
@@ -137,7 +137,7 @@
                         <h1>High-Fi Prototype</h1>
 						<p>Click the image below to see the Prototype</p>
                          <a href="https://ialoha.github.io/reading.html?fbclid=IwAR07iATFQFSmOUJZyyfakSiFBEbwjotYI0bQpA7hZnMoOF6AcnIGBmUiyYw" >
-                             <img border="0" src="images/code-pencil-ruler-512.png" width="500" >
+                             <img border="0" src='https://dimitrisd1997.github.io/code-pencil-ruler-512.png' width="500" >
                         </a>
                      </header>
 				</div>
@@ -156,22 +156,22 @@
 					<section class="profiles">
 						<div class="row">
 							<section class="3u 6u(medium) 12u$(xsmall) profile">
-								<img src="images/tsangas.jpg" alt="" style="width:300px;height: 400px;"/>
+								<img src='https://dimitrisd1997.github.io/tsangas.jpg' alt="" style="width:300px;height: 400px;"/>
 								<h4>Christos Tsangarides</h4>
 								<p></p>
 							</section>
 							<section class="3u 6u$(medium) 12u$(xsmall) profile">
-								<img src="images/alyssia.jpg" alt="" style="width:300px;height: 400px"/>
+								<img src='https://dimitrisd1997.github.io/alyssia.jpg' alt="" style="width:300px;height: 400px"/>
 								<h4>Alyssa Nicole Doria</h4>
 								<p></p>
 							</section>
 							<section class="3u 6u(medium) 12u$(xsmall) profile">
-								<img src="images/IMG_20180823_154720_846.jpg" alt="" style="width:300px;height: 400px"/>
+								<img src='https://dimitrisd1997.github.io/IMG_20180823_154720_846.jpg' alt="" style="width:300px;height: 400px"/>
 								<h4>Demetris Demetriades</h4>
 								<p></p>
 							</section>
 							<section class="3u$ 6u$(medium) 12u$(xsmall) profile">
-								<img src="images/53681371_824591021223998_274321618484854784_n.jpg" alt="" style="width:300px;;height:400px"/>
+								<img src='https://dimitrisd1997.github.io/53681371_824591021223998_274321618484854784_n.jpg' alt="" style="width:300px;;height:400px"/>
 								<h4>Chibu Agbanyim</h4>
 								<p></p>
 							</section>
