--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 		<script src='https://dimitrisd1997.github.io/skel-layers.min.js'></script>
 		<script src='https://dimitrisd1997.github.io/init.js'></script>
 		<noscript>
-			<link rel="stylesheet" href='https://dimitrisd1997.github.io/skel.css' />
-			<link rel="stylesheet" href='https://dimitrisd1997.github.io/style.css' />
-			<link rel="stylesheet" href='https://dimitrisd1997.github.io/style-xlarge.css' />
+			<link rel='stylesheet' href='https://dimitrisd1997.github.io/skel.css' />
+			<link rel='stylesheet' href='https://dimitrisd1997.github.io/style.css' />
+			<link rel='stylesheet' href='https://dimitrisd1997.github.io/style-xlarge.css' />
 		</noscript>
 	</head>
 	 <body>
@@ -74,11 +74,11 @@
 					<div class="row 150%">
 						<div class="4u 12u$(medium)">
 							<section class="box">
-								 <img src="images/cloud.png" style="width:150px;">
+								 <img src='https://dimitrisd1997.github.io/cloud.png' style="width:150px;">
 								<h3>Needfinding</h3>
 								<p style ="cursor: pointer" ><a 
-                                 href="files/Empathy-Map.pdf" target ="_blank" > PDF</a>|<a
-                                 href="files/Empathy-Map.pptx" > PPT</a></p>
+                                 href='https://dimitrisd1997.github.io/Empathy-Map.pdf' target ="_blank" > PDF</a>|<a
+                                 href='https://dimitrisd1997.github.io/Empathy-Map.pptx' > PPT</a></p>
 							</section>
 						</div>
 						<div class="4u 12u$(medium)">
@@ -93,8 +93,8 @@
 							      <img src='https://dimitrisd1997.github.io/video-player.png' style="width:150px;height:auto">
 								<h3>Concept Video</h3>
 								<p style ="cursor: pointer" ><a 
-                                 href="files/Concept%20Video.pdf" target ="_blank" > PDF</a>|<a
-                                 href="files/Concept%20Video.pptx" > PPT</a>|<a
+                                 href='https://dimitrisd1997.github.io/Concept%20Video.pdf' target ="_blank" > PDF</a>|<a
+                                 href='https://dimitrisd1997.github.io/Concept%20Video.pptx' > PPT</a>|<a
                                  href= "https://youtu.be/xLe6uf_sbg0" target="_blank" >Video</a></p>
 							</section>
 						</div>
