--- a/index.html
+++ b/index.html
@@ -85,7 +85,8 @@
 							<section class="box">
 								 <img src='https://dimitrisd1997.github.io/bookmark-1.png' style="width:150px;height:auto">
 								<h3>Heuristic Evaluation</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Laudantium ullam consequatur repellat debitis maxime.</p>
+								<p style ="cursor: pointer" ><a 
+                                 href='https://dimitrisd1997.github.io/Heuristic-Evaluation.pdf' target ="_blank" > PDF</a></p>
 							</section>
 						</div>
 						<div class="4u$ 12u$(medium)">
@@ -102,7 +103,9 @@
 							<section class="box">
 								 <img src='https://dimitrisd1997.github.io/edit.png' style="width:150px;height:auto">
 								<h3>Low-Fi Prototype</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim quam consectetur quibusdam magni minus aut modi aliquid.</p>
+								<p style ="cursor: pointer" ><a 
+                                 href='https://dimitrisd1997.github.io/lowfi.pdf' target ="_blank" > PDF</a>|<a
+                                 href='https://dimitrisd1997.github.io/lowfi.pptx' > PPT</a></p>
 							</section>
 						</div>
                         <div class="4u 12u$(medium)">
@@ -110,8 +113,8 @@
 								 <img src='https://dimitrisd1997.github.io/network.png' style="width:150px;height:auto">
 								<h3>Medium-Fi Prototype</h3>
 								<p style ="cursor: pointer" ><a 
-                                 href="files/medfi%20ppt.pdf" target ="_blank" > PDF</a>|<a
-                                 href="files/medfi%20ppt.pptx" > PPT</a></p>
+                                 href='https://dimitrisd1997.github.io/medfi-ppt.pdf' target ="_blank" > PDF</a>|<a
+                                 href='https://dimitrisd1997.github.io/medfi-ppt.pptx' > PPT</a></p>
 							</section>
 						</div>
                         <div class="4u 12u$(medium)">
