--- a/index.html
+++ b/index.html
@@ -121,7 +121,11 @@
 							<section class="box">
 								 <img src='https://dimitrisd1997.github.io/television.png' style="width:150px;height:auto">
 								<h3>High-Fi Prototype</h3>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Enim quam consectetur quibusdam magni minus aut modi aliquid.</p>
+								<p style ="cursor: pointer" ><a 
+                                 href='https://dimitrisd1997.github.io/high-fi.pdf' target ="_blank" > PDF</a>|<a
+                                 href='https://dimitrisd1997.github.io/high-fi.pptx' > PPT</a>|<a
+                                 href='https://dimitrisd1997.github.io/Group-Report-HCI_Group2 (1).pdf' > REPORT</a>|<a
+                                 href="https://ialoha.github.io/reading.html?fbclid=IwAR07iATFQFSmOUJZyyfakSiFBEbwjotYI0bQpA7hZnMoOF6AcnIGBmUiyYw" > EXPLOREREADING</a></p>
 							</section>
 						</div>
 					</div>
