--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
 						</div>
 						<div class="4u 12u$(medium)">
 							<section class="box">
-								 <img src='https://dimitrisd1997.github.io/bookmark-1.png' style="width:150px;height:auto">
+								 <img src='https://dimitrisd1997.github.io/bookmark-1.png' style="width:150px;height:150px">
 								<h3>Heuristic Evaluation</h3>
 								<p style ="cursor: pointer" ><a 
                                  href='https://dimitrisd1997.github.io/Heuristic-Evaluation.pdf' target ="_blank" > PDF</a></p>
@@ -91,7 +91,7 @@
 						</div>
 						<div class="4u$ 12u$(medium)">
 							<section class="box">
-							      <img src='https://dimitrisd1997.github.io/video-player.png' style="width:150px;height:auto">
+							      <img src='https://dimitrisd1997.github.io/video-player.png' style="width:150px;height:150px">
 								<h3>Concept Video</h3>
 								<p style ="cursor: pointer" ><a 
                                  href='https://dimitrisd1997.github.io/Concept%20Video.pdf' target ="_blank" > PDF</a>|<a
@@ -125,7 +125,7 @@
                                  href='https://dimitrisd1997.github.io/high-fi.pdf' target ="_blank" > PDF</a>|<a
                                  href='https://dimitrisd1997.github.io/high-fi.pptx' > PPT</a>|<a
                                  href='https://dimitrisd1997.github.io/Group-Report-HCI_Group2 (1).pdf' > REPORT</a>|<a
-                                 href="https://ialoha.github.io/reading.html?fbclid=IwAR07iATFQFSmOUJZyyfakSiFBEbwjotYI0bQpA7hZnMoOF6AcnIGBmUiyYw" > EXPLOREREADING</a></p>
+                                 href="https://ialoha.github.io/reading.html?fbclid=IwAR07iATFQFSmOUJZyyfakSiFBEbwjotYI0bQpA7hZnMoOF6AcnIGBmUiyYw" > PROTOTYPE</a></p>
 							</section>
 						</div>
 					</div>
