--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 					<div class="row 150%">
 						<div class="4u 12u$(medium)">
 							<section class="box">
-								 <img src='https://dimitrisd1997.github.io/cloud.png' style="width:150px;">
+								 <img src='https://dimitrisd1997.github.io/cloud.png' style="width:150px;height:150px">
 								<h3>Needfinding</h3>
 								<p style ="cursor: pointer" ><a 
                                  href='https://dimitrisd1997.github.io/Empathy-Map.pdf' target ="_blank" > PDF</a>|<a
@@ -101,7 +101,7 @@
 						</div>
                         <div class="4u 12u$(medium)">
 							<section class="box">
-								 <img src='https://dimitrisd1997.github.io/edit.png' style="width:150px;height:auto">
+								 <img src='https://dimitrisd1997.github.io/edit.png' style="width:150px;height:150px">
 								<h3>Low-Fi Prototype</h3>
 								<p style ="cursor: pointer" ><a 
                                  href='https://dimitrisd1997.github.io/lowfi.pdf' target ="_blank" > PDF</a>|<a
@@ -110,7 +110,7 @@
 						</div>
                         <div class="4u 12u$(medium)">
 							<section class="box">
-								 <img src='https://dimitrisd1997.github.io/network.png' style="width:150px;height:auto">
+								 <img src='https://dimitrisd1997.github.io/network.png' style="width:150px;height:150px">
 								<h3>Medium-Fi Prototype</h3>
 								<p style ="cursor: pointer" ><a 
                                  href='https://dimitrisd1997.github.io/medfi-ppt.pdf' target ="_blank" > PDF</a>|<a
@@ -119,7 +119,7 @@
 						</div>
                         <div class="4u 12u$(medium)">
 							<section class="box">
-								 <img src='https://dimitrisd1997.github.io/television.png' style="width:150px;height:auto">
+								 <img src='https://dimitrisd1997.github.io/television.png' style="width:150px;height:150px">
 								<h3>High-Fi Prototype</h3>
 								<p style ="cursor: pointer" ><a 
                                  href='https://dimitrisd1997.github.io/high-fi.pdf' target ="_blank" > PDF</a>|<a
@@ -163,22 +163,22 @@
 					<section class="profiles">
 						<div class="row">
 							<section class="3u 6u(medium) 12u$(xsmall) profile">
-								<img src='https://dimitrisd1997.github.io/tsangas.jpg' alt="" style="width:250px;height: 250px;"/>
+								<img src='https://dimitrisd1997.github.io/tsangas.jpg' alt="" style="width:280px;height: 280px;"/>
 								<h4>Christos Tsangarides</h4>
 								<p></p>
 							</section>
 							<section class="3u 6u$(medium) 12u$(xsmall) profile">
-								<img src='https://dimitrisd1997.github.io/alyssia.jpg' alt="" style="width:250px;height: 250px"/>
+								<img src='https://dimitrisd1997.github.io/alyssia.jpg' alt="" style="width:280px;height: 280px"/>
 								<p></p>
 								<h4>Alyssa Nicole Doria</h4>
 							</section>
 							<section class="3u 6u(medium) 12u$(xsmall) profile">
-								<img src='https://dimitrisd1997.github.io/IMG_20180823_154720_846.jpg' alt="" style="width:250px;height: 250px"/>
+								<img src='https://dimitrisd1997.github.io/IMG_20180823_154720_846.jpg' alt="" style="width:280px;height: 280px"/>
 								<h4>Demetris Demetriades</h4>
 								<p></p>
 							</section>
 							<section class="3u$ 6u$(medium) 12u$(xsmall) profile">
-								<img src='https://dimitrisd1997.github.io/53681371_824591021223998_274321618484854784_n.jpg' alt="" style="width:250px;;height:250px"/>
+								<img src='https://dimitrisd1997.github.io/53681371_824591021223998_274321618484854784_n.jpg' alt="" style="width:280px;;height:280px"/>
 								<p></p>
 								<h4>Chibu Agbanyim</h4
 								<p></p>
