--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 				<div class="container">
 					<header class="major">
 						<h2>The Team</h2>
-						<p1>Meet the team</p1>
+						<p1>Meet the team that developed exploreReading!</p1>
 					</header>
 					<section class="profiles">
 						<div class="row">
