--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 								<p style ="cursor: pointer" ><a 
                                  href='https://dimitrisd1997.github.io/high-fi.pdf' target ="_blank" > PDF</a>|<a
                                  href='https://dimitrisd1997.github.io/high-fi.pptx' > PPT</a>|<a
-                                 href='https://dimitrisd1997.github.io/Group-Report-HCI_Group2 (1).pdf' > REPORT</a>|<a
-                                 href="https://ialoha.github.io/reading.html?fbclid=IwAR07iATFQFSmOUJZyyfakSiFBEbwjotYI0bQpA7hZnMoOF6AcnIGBmUiyYw" > PROTOTYPE</a></p>
+                                 href='https://dimitrisd1997.github.io/Group-Report-HCI_Group2 (1).pdf'  target ="_blank" > REPORT</a>|<a
+                                 href="https://ialoha.github.io/reading.html?fbclid=IwAR07iATFQFSmOUJZyyfakSiFBEbwjotYI0bQpA7hZnMoOF6AcnIGBmUiyYw"  target ="_blank" > PROTOTYPE</a></p>
 							</section>
 						</div>
 					</div>
@@ -143,7 +143,7 @@
                     <header class="major">
                         <h1>High-Fi Prototype</h1>
 						<p>Click the image below to see the Prototype</p>
-                         <a href="https://ialoha.github.io/reading.html?fbclid=IwAR07iATFQFSmOUJZyyfakSiFBEbwjotYI0bQpA7hZnMoOF6AcnIGBmUiyYw" >
+                         <a href="https://ialoha.github.io/reading.html?fbclid=IwAR07iATFQFSmOUJZyyfakSiFBEbwjotYI0bQpA7hZnMoOF6AcnIGBmUiyYw"  target ="_blank" >
                              <img border="0" src='https://dimitrisd1997.github.io/code-pencil-ruler-512.png' width="500" >
                         </a>
                      </header>
