--- a/individual.html
+++ b/individual.html
@@ -74,7 +74,7 @@
                 <div class="section-inner">
                     <h2>About the Website</h2>
                     <p>Evidence of the Local Host</p>
-                    <img src="local.PNG" >
+                    <img src="https://dimitrisd1997.github.io/local.PNG" >
                 </div>
             </section>
         </main>
