--- a/individual.html
+++ b/individual.html
@@ -74,7 +74,12 @@
                 <div class="section-inner">
                     <h2>About the Website</h2>
                     <p>Evidence of the Local Host</p>
-                    <img src="https://dimitrisd1997.github.io/local.PNG" >
+                   <div class="fir">
+                    <img src="local.PNG" style="width: 800px;" >
+                    </div>
+                    <div class="sec">
+                    <img src="server.PNG" style="width:800px" >
+                    </div>   
                 </div>
             </section>
         </main>
