--- a/individual.html
+++ b/individual.html
@@ -75,10 +75,10 @@
                     <h2>About the Website</h2>
                     <p>Evidence of the Local Host</p>
                    <div class="fir">
-                    <img src="local.PNG" style="width: 800px;" >
+                    <img src="https://dimitrisd1997.github.io/local.PNG" style="width: 800px;" >
                     </div>
                     <div class="sec">
-                    <img src="server.PNG" style="width:800px" >
+                    <img src="https://dimitrisd1997.github.io/server.PNG" style="width:800px" >
                     </div>   
                 </div>
             </section>
