--- a/individual.html
+++ b/individual.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>inidividualDemetris</title>
-        <link rel="stylesheet" href="style2.css">
+        <link rel="stylesheet" href="https://dimitrisd1997.github.io/style2.css">
     </head>
     
     <script>
