--- a/individual.html
+++ b/individual.html
@@ -73,7 +73,7 @@
             <section id="evid">
                 <div class="section-inner">
                     <h2>About the Website</h2>
-                    <p>Evidence of the Local Host</p>
+                    <p>Evidence of Local and Server Hosting</p>
                    <div class="fir">
                     <img src="https://dimitrisd1997.github.io/local.PNG" style="width: 800px;" >
                     </div>
